更新部分文档

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "./node_modules/.bin/babel src -d dist",
+    "build": ".\\node_modules\\.bin\\babel src -d dist",
     "clean": "rm -rf build/*",
-    "dev": "nodemon ./src/bin/server.js --exec babel-node",
-    "start": "node ./dist/bin/server.js"
+    "dev": "nodemon .\\src\\bin\\server.js --exec babel-node",
+    "start": "node .\\dist\\bin\\server.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.21",
     "openapi-types": "^12.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2"
