--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": ".\\node_modules\\.bin\\babel src -d dist",
+    "build": "babel .\\src --extensions .ts --out-dir .\\build",
     "clean": "rm -rf build/*",
-    "dev": "nodemon .\\src\\bin\\server.js --exec babel-node",
-    "start": "node .\\dist\\bin\\server.js"
+    "dev": "nodemon .\\src\\bin\\server.ts --exec ts-node",
+    "start": "node .\\build\\bin\\server.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -22,8 +22,18 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.3",
+    "@babel/core": "^7.21.4",
     "@babel/node": "^7.20.7",
-    "@babel/preset-env": "^7.20.2"
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/debug": "^4.1.7",
+    "@types/express": "^4.17.17",
+    "@types/http-errors": "^2.0.1",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.15.11",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "typescript": "^5.0.3"
   }
 }
